--- a/sensu/check.d/check-disk-usege.json.tmpl
+++ b/sensu/check.d/check-disk-usege.json.tmpl
@@ -1,7 +1,7 @@
 {
   "checks": {
     "check_disk_usage": {
-      "command": "check-disk-usege.rb",
+      "command": "check-disk-usage.rb",
       "handlers": [
         "mail"
       ],
