--- a/ELK/logstash-indexer.conf.tmpl
+++ b/ELK/logstash-indexer.conf.tmpl
@@ -2,9 +2,11 @@ input {
   redis {
     host => "redis"
     port => 6379
+    threads => 8
     key => "logstash"
     data_type => "list"
     codec => json
+    batch_count => 100000
   }
 }
 filter {
