--- a/ELK/logstash-indexer.conf.tmpl
+++ b/ELK/logstash-indexer.conf.tmpl
@@ -2,11 +2,10 @@ input {
   redis {
     host => "redis"
     port => 6379
-    threads => 8
+    threads => "16"
     key => "logstash"
     data_type => "list"
     codec => json
-    batch_count => 10000
   }
 }
 filter {
@@ -24,5 +23,6 @@ output {
     host => "elasticsearch"
     protocol => "http"
     index => "{{ .Env.INDEX }}"
+    workers => "16"
   }
 }
