--- a/ELK/logstash-merge.conf.tmpl
+++ b/ELK/logstash-merge.conf.tmpl
@@ -10,8 +10,7 @@ input {
 }
 output {
   elasticsearch {
-    host => "elasticsearch"
-    protocol => "http"
+    hosts => "elasticsearch"
     index => "{{ .Env.MERGE }}"
     workers => "16"
   }
