--- a/ELK/logstash-merge.conf.tmpl
+++ b/ELK/logstash-merge.conf.tmpl
@@ -6,6 +6,7 @@ input {
 }
 output {
   elasticsearch {
+    hosts => ["elasticsearch"]
     index => "{{ .Env.MERGE }}"
     document_type => "%{[@metadata][_type]}"
     document_id => "%{[@metadata][_id]}"
