--- a/ELK/logstash-merge.conf.tmpl
+++ b/ELK/logstash-merge.conf.tmpl
@@ -2,6 +2,9 @@ input {
   elasticsearch {
     hosts => ["elasticsearch"]
     index => "{{ .Env.SOURCE }}"
+    size => 500
+    scroll => "5m"
+    docinfo => true
   }
 }
 output {
