--- a/ELK/master/elasticsearch.yml.tmpl
+++ b/ELK/master/elasticsearch.yml.tmpl
@@ -1,5 +1,5 @@
 cluster.name: "{{ default .Env.CLUSTER_NAME "es" }}"
-node.name: "{{ .Env.HOSTNAME }}"
+node.name: ${HOSTNAME}
 node.data: "false"
 node.master: "true"
 network.host: "_site_"
