--- a/ELK/nginx/default.conf.tmpl
+++ b/ELK/nginx/default.conf.tmpl
@@ -26,7 +26,7 @@ http {
   
     {{ if .Env.KOPF_BASIC_AUTH_LOGIN }}
     auth_basic "Access restricted";
-    auth_basic_user_file /etc/nginx/kopf.htpasswd;
+    auth_basic_user_file /etc/nginx/conf.d/kopf.htpasswd;
     {{ end }}
   
     {{ if .Env.KOPF_NGINX_INCLUDE_FILE }}
