--- a/collector.conf.tmpl
+++ b/collector.conf.tmpl
@@ -5,9 +5,9 @@ input {
 }
 filter {
   if [path] =~ "dht2" {
-    grok {
-      match => { "message" => "%{TEXT:1} %{TEXT:2} %{TEXT:3} %{TEXT:4} %{TEXT:5} %{TEXT:6} %{TEXT:7} %{TEXT:8}" }
-    }
+     csv {
+      separator => "  "
+     }
   }
 }
 output {
