--- a/collector.conf.tmpl
+++ b/collector.conf.tmpl
@@ -4,8 +4,8 @@ input {
   }
 }
 filter {
-  csv {
-    separator => '\t'
+  grok {
+    pattern => "%{TEXT:1}\t%{TEXT:2}\t%{TEXT:3}\t%{TEXT:4}\t%{TEXT:5}\t%{TEXT:6}\t%{TEXT:7}\t%{TEXT:8}"
   }
 }
 output {
