--- a/collector.conf.tmpl
+++ b/collector.conf.tmpl
@@ -5,7 +5,7 @@ input {
 }
 filter {
   grok {
-    pattern => "%{TEXT:c1}\t%{TEXT:c2}\t%{TEXT:c3}\t%{TEXT:c4}\t%{TEXT:c5}\t%{TEXT:c6}\t%{TEXT:c7}\t%{TEXT:c8}"
+    pattern => "%{TEXT:c1}\\t%{TEXT:c2}\\t%{TEXT:c3}\\t%{TEXT:c4}\\t%{TEXT:c5}\\t%{TEXT:c6}\\t%{TEXT:c7}\\t%{TEXT:c8}"
   }
 }
 output {
