--- a/collector.conf.tmpl
+++ b/collector.conf.tmpl
@@ -4,8 +4,8 @@ input {
   }
 }
 filter {
-  grok {
-    pattern => "%{TEXT:c1}\\t%{TEXT:c2}\\t%{TEXT:c3}\\t%{TEXT:c4}\\t%{TEXT:c5}\\t%{TEXT:c6}\\t%{TEXT:c7}\\t%{TEXT:c8}"
+  csv {
+    separator => ""
   }
 }
 output {
