--- a/collector.conf.tmpl
+++ b/collector.conf.tmpl
@@ -5,7 +5,7 @@ input {
 }
 filter {
   grok {
-    patterns_dir => ["/config/pattern/pattern"]
+    patterns_dir => ["/config/pattern"]
     match => { "message" => "%{FJY_BY_NEGASH}" }
   }
 }
