--- a/indexer.conf.tmpl
+++ b/indexer.conf.tmpl
@@ -14,6 +14,6 @@ input {
 output {
   file {
     message_format => "%{[column1]}\t%{[column2]}"
-    path => "/tmp/%{host}"
+    path => "/tmp/%{filename}"
   }
 }
