--- a/collector.conf.tmpl
+++ b/collector.conf.tmpl
@@ -17,5 +17,13 @@ filter {
   }
 }
 output {
-  stdout { codec => rubydebug }
+  redis {
+    host => "{{ default .Env.REDIS_HOST "redis" }}"
+    port => 6379
+    threads => 16
+    key => "logstash"
+    data_type => "list"
+    codec => json
+    batch_count => 10000
+  }
 }
