--- a/indexer.conf.tmpl
+++ b/indexer.conf.tmpl
@@ -13,5 +13,6 @@ output {
   file {
     message_format => "%{[column1]}	%{[column2]}	%{[column3]}	%{[column4]}	%{[column5]}	%{[column6]}	%{[column8]}"
     path => "/load/%{filename}"
+    workers => 4
   }
 }
