--- a/indexer.conf.tmpl
+++ b/indexer.conf.tmpl
@@ -14,5 +14,6 @@ output {
     message_format => "%{[column1]}	%{[column2]}	%{[column3]}	%{[column4]}	%{[column5]}	%{[column6]}	%{[column8]}"
     path => "/load/%{filename}"
     workers => 4
+    flush_interval => 30
   }
 }
