--- a/indexer.conf.tmpl
+++ b/indexer.conf.tmpl
@@ -6,8 +6,13 @@ input {
     key => "logstash"
     data_type => "list"
     codec => json
-    batch_count => 10000
+    batch_count => 50000
   }
 }
 output {
+  file {		
+    message_format => "%{[column1]}	%{[column2]}	%{[column3]}	%{[column4]}	%{[column5]}	%{[column6]}	%{[column8]}"		
+    path => "/load/%{filename}"		
+    flush_interval => 5		
+  }
 }
