--- a/ELK/nginx/default.conf.tmpl
+++ b/ELK/nginx/default.conf.tmpl
@@ -17,6 +17,7 @@ http {
   default_type application/octet-stream;
   access_log /dev/stdout;
   error_log /dev/stderr;
+  resolver {{ default .Env.RESOLVER "0.0.0.0" }};
   server {
     listen 80;
   
