--- a/csv2es.conf.tmpl
+++ b/csv2es.conf.tmpl
@@ -1,6 +1,6 @@
 input {
       file {
-          path => ["/log/*"]
+          path => "/log/*"
           start_position => "beginning"
       }
 }
