--- a/csv2es.conf.tmpl
+++ b/csv2es.conf.tmpl
@@ -10,6 +10,9 @@ filter {
         columns => ["one","two","three"]
         separator => ";"
     }
+    mutate {
+        remove => [ "message", "host", "@version","path"] 
+    }
 }
 
 output {
