--- a/indexer.conf.tmpl
+++ b/indexer.conf.tmpl
@@ -10,4 +10,10 @@ input {
   }
 }
 output {
+  elasticsearch {
+    host => "elasticsearch"
+    protocol => "http"
+    index => "logstash-%{+YYYY.MM.dd.HH.mm}"
+    workers => "16"
+  }
 }
