--- a/indexer.conf.tmpl
+++ b/indexer.conf.tmpl
@@ -11,7 +11,7 @@ input {
 }
 output {
   elasticsearch {
-    hosts => ["elasticsearch:9200"]
+    hosts => ['elasticsearch:9200']
     index => "logstash-%{+YYYY.MM.dd.HH.mm}"
   }
 }
