--- a/indexer.conf.tmpl
+++ b/indexer.conf.tmpl
@@ -13,5 +13,6 @@ output {
   elasticsearch {
     hosts => "elasticsearch"
     index => "logstash-%{+YYYY.MM.dd.HH.mm}"
+    workers => "16"
   }
 }
