--- a/indexer.conf.tmpl
+++ b/indexer.conf.tmpl
@@ -5,10 +5,8 @@ input {
     threads => 16
     key => "logstash"
     data_type => "list"
-    workers => 16
-    batch => true
-    batch_events => 1000
-    batch_timeout => 5
+    codec => json
+    batch_count => 10000
   }
 }
 output {
