--- a/collector.conf.tmpl
+++ b/collector.conf.tmpl
@@ -5,6 +5,10 @@ input {
   }
 }
 filter {
+  csv {
+    separator => "	"
+  }
+
   grok {
     match => ["path","%{GREEDYDATA}/%{GREEDYDATA:type}/%{GREEDYDATA:filename}"]
   }
