--- a/realtime.conf.tmpl
+++ b/realtime.conf.tmpl
@@ -23,5 +23,10 @@ output {
     protocol => "http"
     index => "logstash-%{filename}"
     workers => 8
+    max_retries => 10
+    retry_max_interval => 5
+    retry_max_items => 100
+    flush_size => 100
+    timeout => 25
   }
 }
