--- a/redis/slave.conf.tmpl
+++ b/redis/slave.conf.tmpl
@@ -1,6 +1,7 @@
 port 6378
 {{ if .Env.PASS }}
 requirepass {{ .Env.PASS }}
+masterauth {{ .Env.PASS }}
 {{end}}
 cluster-enabled yes
 cluster-config-file nodes.conf
