--- a/redis/master.conf.tmpl
+++ b/redis/master.conf.tmpl
@@ -1,6 +1,7 @@
 port 6379
 {{ if .Env.PASS }}
 requirepass {{ .Env.PASS }}
+masterauth {{ .Env.PASS }}
 {{end}}
 cluster-enabled yes
 cluster-config-file nodes.conf
