--- a/registry-docker/htpasswd.tmpl
+++ b/registry-docker/htpasswd.tmpl
@@ -1,1 +1,1 @@
-{{ default .Env.AUTH "admin:$apr1$GAsJcq8Y$vOLR5hxKK193AhvkLscXN/" }}
+{{ default .Env.AUTH "admin:$2y$05$tnGo4u6CqMT8lLybruYZeuwubzLTYIVUnagKFsCJOpkRkz/lXtauG" }}
