--- a/redis/sentinel.conf.tmpl
+++ b/redis/sentinel.conf.tmpl
@@ -1,5 +1,5 @@
 port 26379
-sentinel monitor master01 redis-master 6379 1
+sentinel monitor mymaster redis-master 6379 1
 {{ if .Env.PASS }}
 sentinel auth-pass mymaster {{ .Env.PASS }}
 {{end}}
