--- a/clickhouse/users.d/default.xml.tmpl
+++ b/clickhouse/users.d/default.xml.tmpl
@@ -30,7 +30,7 @@
                  All results of DNS requests are cached till server restart.
             -->
 			<networks>
-				<host_regexp>{{ default .Env.CH_DEFAULT_HOST_REGEXP "^ch-s\d-r\d$" }}</host_regexp>
+				<host_regexp>^ch-s\d-r\d$</host_regexp>
 			</networks>
             <!-- Settings profile for user. -->
             <profile>default</profile>
