--- a/clickhouse/users.d/signal.xml.tmpl
+++ b/clickhouse/users.d/signal.xml.tmpl
@@ -3,11 +3,12 @@
 	<users>
 		<signal replace="replace">
 			<password>{{ default  .Env.CH_SIGNAL_PASSWORD "" }}</password>
-            <profile>web</profile>
-            <quota>default</quota>
+			<profile>web</profile>
+			<quota>default</quota>
+			<readonly>1</readonly>
 			<networks>
-                <ip>::/0</ip>
-            </networks>
+				<ip>::/0</ip>
+			</networks>
 		</signal>
 	</users>
 </yandex>
