--- a/clickhouse/users.d/default.xml.tmpl
+++ b/clickhouse/users.d/default.xml.tmpl
@@ -30,7 +30,8 @@
                  All results of DNS requests are cached till server restart.
             -->
 			<networks>
-				<host_regexp>^ch-s\d-r\d$</host_regexp>
+				<!-- <host_regexp>^ch-s\d-r\d$</host_regexp> -->
+				<ip>10.42.0.0/16</ip>
 			</networks>
             <!-- Settings profile for user. -->
             <profile>default</profile>
