--- a/redis/cluster.conf.tmpl
+++ b/redis/cluster.conf.tmpl
@@ -6,4 +6,4 @@ masterauth {{ .Env.PASS }}
 {{end}}
 cluster-enabled yes
 cluster-config-file nodes.conf
-cluster-node-timeout 5000
+cluster-node-timeout 5000000
